// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PageProposal has the expected html structure if user has signed in 1`] = `
<div
  class="tm-page"
  data-title="Proposal"
>
  <header
    class="tm-page-header"
  >
    <div
      class="tm-page-header-container"
    >
      <div
        class="tm-page-header-text"
      >
        <!---->
         
        <!---->
         
        <div
          class="tm-page-header-body"
        >
          <div
            class="header-balance"
          >
            <div
              class="top"
            >
              <div
                class="icon-container"
              >
                <img
                  class="icon"
                  src="~assets/images/cosmos-logo.png"
                />
              </div>
               
              <div
                class="total-atoms top-section"
              >
                <h3>
                  Total STAKE
                </h3>
                 
                <h2
                  class="total-atoms__value"
                >
                  
        0.0000…
      
                </h2>
              </div>
               
              <div
                class="unbonded-atoms top-section"
              >
                <h3>
                  Available STAKE
                </h3>
                 
                <h2>
                  0.0000…
                </h2>
              </div>
            </div>
             
            <short-bech32-stub
              address=""
            />
             
          </div>
           
          <div
            class="tool-bar"
          >
            <!---->
             
            <!---->
              
            <a
              class="help"
            >
              <i
                class="material-icons"
              >
                help_outline
              </i>
            </a>
             
            <router-link-stub
              id="settings"
              to="/preferences"
            >
              <i
                class="material-icons"
              >
                settings
              </i>
            </router-link-stub>
             
            <a
              id="signOut-btn"
            >
              <i
                class="material-icons"
              >
                exit_to_app
              </i>
            </a>
             
            <!---->
          </div>
        </div>
      </div>
       
      <menu
        class="tm-page-header-menu"
      />
       
      <div
        class="tabs"
      />
       
      <!---->
    </div>
  </header>
   
  <main
    class="tm-page-main"
  >
    <!---->
     
    <!---->
      
    <div
      class="page-profile__header page-profile__section proposal"
    >
      <div
        class="row"
      >
        <h2
          class="proposal-id"
        >
          
          #2
        
        </h2>
         
        <div
          class="page-profile__header__info"
        >
          <div
            class="page-profile__status-and-title"
          >
            <span
              class="page-profile__status green"
            />
             
            <h2
              class="page-profile__title"
            >
              
              VotingPeriod proposal
            
            </h2>
             
            <h3>
              
              Proposer: Fede
            
            </h3>
          </div>
           
          <div
            class="page-profile__header__actions"
          >
            <button
              class="tm-btn"
              id="vote-btn"
            >
              <span
                class="tm-btn__container tm-btn--primary"
              >
                <!---->
                <span
                  class="tm-btn__value"
                >
                  Vote
                </span>
              </span>
            </button>
             
            <!---->
             
            <!---->
             
            <!---->
          </div>
        </div>
      </div>
       
      <div
        class="row"
      >
        <dl
          class="info_dl colored_dl"
        >
          <dt>
            Submitted
          </dt>
           
          <dd>
            a few seconds ago
          </dd>
        </dl>
         
        <dl
          class="info_dl colored_dl"
        >
          <dt>
            Proposal Status
          </dt>
           
          <dd>
            
            Voting started in 2 days.
          
          </dd>
        </dl>
         
        <dl
          class="info_dl colored_dl"
        >
          <dt>
            Deposit Count
          </dt>
           
          <dd>
            
            200 STAKE
          
          </dd>
        </dl>
         
        <dl
          class="info_dl colored_dl"
        >
          <dt>
            Vote Count
          </dt>
           
          <dd>
            0
          </dd>
        </dl>
      </div>
    </div>
     
    <div
      class="page-profile__section"
    >
      <div
        class="row"
      >
        <dl
          class="info_dl colored_dl"
        >
          <dt>
            Yes
          </dt>
           
          <dd>
            0 / 0%
          </dd>
        </dl>
         
        <dl
          class="info_dl colored_dl"
        >
          <dt>
            No
          </dt>
           
          <dd>
            0 / 0%
          </dd>
        </dl>
         
        <dl
          class="info_dl colored_dl"
        >
          <dt>
            No with Veto
          </dt>
           
          <dd>
            0 / 0%
          </dd>
        </dl>
         
        <dl
          class="info_dl colored_dl"
        >
          <dt>
            Abstain
          </dt>
           
          <dd>
            0 / 0%
          </dd>
        </dl>
      </div>
       
      <div
        class="row"
      >
        <div
          class="column"
        >
          <dl
            class="info_dl colored_dl"
          >
            <dt>
              Description
            </dt>
             
            <dd>
              <div
                class="text-block"
              >
                <p>
                  custom text proposal description
                </p>
                

              </div>
            </dd>
          </dl>
        </div>
      </div>
    </div>
     
    <modal-deposit-stub
      denom="STAKE"
      proposalid="2"
      proposaltitle="VotingPeriod proposal"
    />
     
    <modal-vote-stub
      proposalid="2"
      proposaltitle="VotingPeriod proposal"
    />
  </main>
</div>
`;

exports[`PageProposal has the expected html structure if user hasn't signed in 1`] = `
<div
  class="tm-page"
  data-title="Proposal"
>
  <header
    class="tm-page-header"
  >
    <div
      class="tm-page-header-container"
    >
      <div
        class="tm-page-header-text"
      >
        <!---->
         
        <!---->
         
        <div
          class="tm-page-header-body"
        >
          <div
            class="header-balance"
          >
            <div
              class="top"
            >
              <div
                class="icon-container"
              >
                <img
                  class="icon"
                  src="~assets/images/cosmos-logo.png"
                />
              </div>
               
              <div
                class="total-atoms top-section"
              >
                <h3>
                  Total STAKE
                </h3>
                 
                <h2
                  class="total-atoms__value"
                >
                  
        0.0000…
      
                </h2>
              </div>
               
              <div
                class="unbonded-atoms top-section"
              >
                <h3>
                  Available STAKE
                </h3>
                 
                <h2>
                  0.0000…
                </h2>
              </div>
            </div>
             
            <short-bech32-stub
              address=""
            />
             
          </div>
           
          <div
            class="tool-bar"
          >
            <!---->
             
            <!---->
              
            <a
              class="help"
            >
              <i
                class="material-icons"
              >
                help_outline
              </i>
            </a>
             
            <!---->
             
            <!---->
             
            <button
              class="tm-btn"
              id="signIn-btn"
            >
              <span
                class="tm-btn__container tm-btn--primary"
              >
                <!---->
                <span
                  class="tm-btn__value"
                >
                  Sign In
                </span>
              </span>
            </button>
          </div>
        </div>
      </div>
       
      <menu
        class="tm-page-header-menu"
      />
       
      <div
        class="tabs"
      />
       
      <!---->
    </div>
  </header>
   
  <main
    class="tm-page-main"
  >
    <!---->
     
    <!---->
      
    <div
      class="page-profile__header page-profile__section proposal"
    >
      <div
        class="row"
      >
        <h2
          class="proposal-id"
        >
          
          #2
        
        </h2>
         
        <div
          class="page-profile__header__info"
        >
          <div
            class="page-profile__status-and-title"
          >
            <span
              class="page-profile__status green"
            />
             
            <h2
              class="page-profile__title"
            >
              
              VotingPeriod proposal
            
            </h2>
             
            <h3>
              
              Proposer: Fede
            
            </h3>
          </div>
           
          <div
            class="page-profile__header__actions"
          >
            <button
              class="tm-btn"
              id="vote-btn"
            >
              <span
                class="tm-btn__container tm-btn--primary"
              >
                <!---->
                <span
                  class="tm-btn__value"
                >
                  Vote
                </span>
              </span>
            </button>
             
            <!---->
             
            <!---->
             
            <!---->
          </div>
        </div>
      </div>
       
      <div
        class="row"
      >
        <dl
          class="info_dl colored_dl"
        >
          <dt>
            Submitted
          </dt>
           
          <dd>
            a few seconds ago
          </dd>
        </dl>
         
        <dl
          class="info_dl colored_dl"
        >
          <dt>
            Proposal Status
          </dt>
           
          <dd>
            
            Voting started in 2 days.
          
          </dd>
        </dl>
         
        <dl
          class="info_dl colored_dl"
        >
          <dt>
            Deposit Count
          </dt>
           
          <dd>
            
            200 STAKE
          
          </dd>
        </dl>
         
        <dl
          class="info_dl colored_dl"
        >
          <dt>
            Vote Count
          </dt>
           
          <dd>
            0
          </dd>
        </dl>
      </div>
    </div>
     
    <div
      class="page-profile__section"
    >
      <div
        class="row"
      >
        <dl
          class="info_dl colored_dl"
        >
          <dt>
            Yes
          </dt>
           
          <dd>
            0 / 0%
          </dd>
        </dl>
         
        <dl
          class="info_dl colored_dl"
        >
          <dt>
            No
          </dt>
           
          <dd>
            0 / 0%
          </dd>
        </dl>
         
        <dl
          class="info_dl colored_dl"
        >
          <dt>
            No with Veto
          </dt>
           
          <dd>
            0 / 0%
          </dd>
        </dl>
         
        <dl
          class="info_dl colored_dl"
        >
          <dt>
            Abstain
          </dt>
           
          <dd>
            0 / 0%
          </dd>
        </dl>
      </div>
       
      <div
        class="row"
      >
        <div
          class="column"
        >
          <dl
            class="info_dl colored_dl"
          >
            <dt>
              Description
            </dt>
             
            <dd>
              <div
                class="text-block"
              >
                <p>
                  custom text proposal description
                </p>
                

              </div>
            </dd>
          </dl>
        </div>
      </div>
    </div>
     
    <modal-deposit-stub
      denom="STAKE"
      proposalid="2"
      proposaltitle="VotingPeriod proposal"
    />
     
    <modal-vote-stub
      proposalid="2"
      proposaltitle="VotingPeriod proposal"
    />
  </main>
</div>
`;

exports[`PageProposal has the expected html structure when voting is open 1`] = `
<div
  class="tm-page"
  data-title="Proposal"
>
  <header
    class="tm-page-header"
  >
    <div
      class="tm-page-header-container"
    >
      <div
        class="tm-page-header-text"
      >
        <!---->
         
        <!---->
         
        <div
          class="tm-page-header-body"
        >
          <div
            class="header-balance"
          >
            <div
              class="top"
            >
              <div
                class="icon-container"
              >
                <img
                  class="icon"
                  src="~assets/images/cosmos-logo.png"
                />
              </div>
               
              <div
                class="total-atoms top-section"
              >
                <h3>
                  Total STAKE
                </h3>
                 
                <h2
                  class="total-atoms__value"
                >
                  
        0.0000…
      
                </h2>
              </div>
               
              <div
                class="unbonded-atoms top-section"
              >
                <h3>
                  Available STAKE
                </h3>
                 
                <h2>
                  0.0000…
                </h2>
              </div>
            </div>
             
            <short-bech32-stub
              address=""
            />
             
          </div>
           
          <div
            class="tool-bar"
          >
            <!---->
             
            <!---->
              
            <a
              class="help"
            >
              <i
                class="material-icons"
              >
                help_outline
              </i>
            </a>
             
            <router-link-stub
              id="settings"
              to="/preferences"
            >
              <i
                class="material-icons"
              >
                settings
              </i>
            </router-link-stub>
             
            <a
              id="signOut-btn"
            >
              <i
                class="material-icons"
              >
                exit_to_app
              </i>
            </a>
             
            <!---->
          </div>
        </div>
      </div>
       
      <menu
        class="tm-page-header-menu"
      />
       
      <div
        class="tabs"
      />
       
      <!---->
    </div>
  </header>
   
  <main
    class="tm-page-main"
  >
    <!---->
     
    <!---->
      
    <div
      class="page-profile__header page-profile__section proposal"
    >
      <div
        class="row"
      >
        <h2
          class="proposal-id"
        >
          
          #2
        
        </h2>
         
        <div
          class="page-profile__header__info"
        >
          <div
            class="page-profile__status-and-title"
          >
            <span
              class="page-profile__status green"
            />
             
            <h2
              class="page-profile__title"
            >
              
              VotingPeriod proposal
            
            </h2>
             
            <h3>
              
              Proposer: Fede
            
            </h3>
          </div>
           
          <div
            class="page-profile__header__actions"
          >
            <button
              class="tm-btn"
              id="vote-btn"
            >
              <span
                class="tm-btn__container tm-btn--primary"
              >
                <!---->
                <span
                  class="tm-btn__value"
                >
                  Vote
                </span>
              </span>
            </button>
             
            <!---->
             
            <!---->
             
            <!---->
          </div>
        </div>
      </div>
       
      <div
        class="row"
      >
        <dl
          class="info_dl colored_dl"
        >
          <dt>
            Submitted
          </dt>
           
          <dd>
            a few seconds ago
          </dd>
        </dl>
         
        <dl
          class="info_dl colored_dl"
        >
          <dt>
            Proposal Status
          </dt>
           
          <dd>
            
            Voting started in 2 days.
          
          </dd>
        </dl>
         
        <dl
          class="info_dl colored_dl"
        >
          <dt>
            Deposit Count
          </dt>
           
          <dd>
            
            200 STAKE
          
          </dd>
        </dl>
         
        <dl
          class="info_dl colored_dl"
        >
          <dt>
            Vote Count
          </dt>
           
          <dd>
            100
          </dd>
        </dl>
      </div>
    </div>
     
    <div
      class="page-profile__section"
    >
      <div
        class="row"
      >
        <dl
          class="info_dl colored_dl"
        >
          <dt>
            Yes
          </dt>
           
          <dd>
            10 / 10%
          </dd>
        </dl>
         
        <dl
          class="info_dl colored_dl"
        >
          <dt>
            No
          </dt>
           
          <dd>
            20 / 20%
          </dd>
        </dl>
         
        <dl
          class="info_dl colored_dl"
        >
          <dt>
            No with Veto
          </dt>
           
          <dd>
            30 / 30%
          </dd>
        </dl>
         
        <dl
          class="info_dl colored_dl"
        >
          <dt>
            Abstain
          </dt>
           
          <dd>
            40 / 40%
          </dd>
        </dl>
      </div>
       
      <div
        class="row"
      >
        <div
          class="column"
        >
          <dl
            class="info_dl colored_dl"
          >
            <dt>
              Description
            </dt>
             
            <dd>
              <div
                class="text-block"
              >
                <p>
                  custom text proposal description
                </p>
                

              </div>
            </dd>
          </dl>
        </div>
      </div>
    </div>
     
    <modal-deposit-stub
      denom="STAKE"
      proposalid="2"
      proposaltitle="VotingPeriod proposal"
    />
     
    <modal-vote-stub
      proposalid="2"
      proposaltitle="VotingPeriod proposal"
    />
  </main>
</div>
`;

exports[`PageProposal shows an error if the proposal couldn't be found 1`] = `
<div
  class="tm-page"
  data-title="Proposal"
>
  <header
    class="tm-page-header"
  >
    <div
      class="tm-page-header-container"
    >
      <div
        class="tm-page-header-text"
      >
        <!---->
         
        <!---->
         
        <div
          class="tm-page-header-body"
        >
          <div
            class="header-balance"
          >
            <div
              class="top"
            >
              <div
                class="icon-container"
              >
                <img
                  class="icon"
                  src="~assets/images/cosmos-logo.png"
                />
              </div>
               
              <div
                class="total-atoms top-section"
              >
                <h3>
                  Total STAKE
                </h3>
                 
                <h2
                  class="total-atoms__value"
                >
                  
        0.0000…
      
                </h2>
              </div>
               
              <div
                class="unbonded-atoms top-section"
              >
                <h3>
                  Available STAKE
                </h3>
                 
                <h2>
                  0.0000…
                </h2>
              </div>
            </div>
             
            <short-bech32-stub
              address=""
            />
             
          </div>
           
          <div
            class="tool-bar"
          >
            <!---->
             
            <!---->
              
            <a
              class="help"
            >
              <i
                class="material-icons"
              >
                help_outline
              </i>
            </a>
             
            <!---->
             
            <!---->
             
            <button
              class="tm-btn"
              id="signIn-btn"
            >
              <span
                class="tm-btn__container tm-btn--primary"
              >
                <!---->
                <span
                  class="tm-btn__value"
                >
                  Sign In
                </span>
              </span>
            </button>
          </div>
        </div>
      </div>
       
      <menu
        class="tm-page-header-menu"
      />
       
      <div
        class="tabs"
      />
       
      <!---->
    </div>
  </header>
   
  <main
    class="tm-page-main"
  >
    <!---->
     
    <!---->
      
    <div
      class="tm-data-msg"
    >
      <div
        class="tm-data-msg__icon"
      >
        <i
          class="material-icons"
        >
          sentiment_very_dissatisfied
        </i>
      </div>
       
      <div
        class="tm-data-msg__text"
      >
        <div
          class="tm-data-msg__title"
        >
          <div>
            
    Aw shucks!
  
          </div>
        </div>
         
        <div
          class="tm-data-msg__subtitle"
        >
          <div>
            
    Even though you're connected a full node, we can't display this data for
    you right now. Please try again later or
    
            <a
              href="https://github.com/cosmos/voyager/issues"
            >
              file a bug report
            </a>
            .
    Apologies!
  
          </div>
        </div>
      </div>
    </div>
  </main>
</div>
`;
